--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -19,7 +19,8 @@
       </ul>
     </div>
     <div ng-app ng-init="checked = false">
-          <form class="form-signin" action="" method="post" name="form">
+          <form class="form-signin" action="{% url 'login' %}" method="POST" name="form">
+              {% csrf_token %}
               <label for="username">Username</label>
               <input class="form-styling" type="text" name="username" placeholder=""/>
               <label for="password">Password</label>
@@ -35,7 +36,8 @@
               </div>
           </form>
 
-            <form class="form-signup" action="" method="post" name="form">
+            <form class="form-signup" action="{% url 'login' %}" method="POST" name="form">
+              {% csrf_token %}
               <label for="fullname">Full name</label>
               <input class="form-styling" type="text" name="fullname" placeholder=""/>
               <label for="email">Email</label>
